<resources>
    <string name="app_name">Tips are Done</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="employees_fragment_label">Tips R Done</string>
    <string name="edit_employee_label">Edit Employee</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    \
    <string name="done">DONE</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="edit_employee">Edit Employee</string>
    <string name="new_employee">New Employee</string>

    <string name="employees_list_invalid_string">Two or more employees are required.</string>
    <string name="employee_name_required">A name must be entered.</string>
    <string name="dates_required">Both dates must be filled out.</string>
    <string name="employee_hours_required">There are no hours inputted.</string>

    <string name="invalid_dates1">Both dates must be filled out.</string>
    <string name="invalid_dates2">The dates entered are invalid.</string>
    <string name="error_has_occurred">An error has occurred.</string>

    <string name="invalid_bills1">Collected tips cannot be zero.</string>
    <string name="invalid_bills2">An incorrect amount has been detected.</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Email or password incorrect."</string>
    <string name="sign_up_failed">Failed to create new user.</string>
    <string name="empty_credentials">An email and password must be entered.</string>


    <string name="delete_confirmation1">This will delete </string>
    <string name="delete_confirmation2"> and all their data.</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="tipsaredone_email_com">tipsAreDone@email.com</string>
    <string name="eight_asterisks">********</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>

    <string name="user_already_signed_in">Signing in.</string>
    <string name="sign_in_successful">Sign in successful.</string>
    <string name="account_creation_successful">New account created.</string>
    <string name="account_creation_unsuccessful">Failed to create new account.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_tips">Do Tips</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
</resources>